--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel='stylesheet' href='css/styles.css'>
 </head>
 <body>
-  
+  <header class="header">
+    
+  </header>
 </body>
 </html>
