--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+
   <header class="header">
     <h1 class="header__title">Nicolás Cousillas</h1>
     <nav class="header__navbar">
@@ -33,7 +33,7 @@
 
   <div class="hero">
     <div class="hero__left">
-      <h2 class="hero__left__title">Hi, <span class="hero__left__typing">I am Nico</span></h2>
+      <h2 class="hero__left__title">Hi, <span id="typingPhrase">I am Nico</span></h2>
       <p class="hero__left__subtitle">Junior Full Stack Developer</p>
       <p class="hero__left__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, hic? Quidem nisi praesentium nihil saepe accusamus? Nulla, ratione.</p>
       <div class="hero__left__icons">
@@ -54,5 +54,7 @@
     </div>
   </div>
 
+
+  <script src="js/script.js"></script>
 </body>
 </html>
