fix in hero animation

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 
   <div class="hero">
     <div class="hero__left">
-      <h2 class="hero__left__title">Hi, <span id="typingPhrase">I am Nico</span></h2>
+      <div class="hero__left__title">
+        <h2>Hi,</h2>
+        <span id="typingPhrase">I am Nico</span>
+      </div>
       <p class="hero__left__subtitle">Junior Full Stack Developer</p>
       <p class="hero__left__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, hic? Quidem nisi praesentium nihil saepe accusamus? Nulla, ratione.</p>
       <div class="hero__left__icons">
