--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </header>
 
   <div class="hero">
-    <div class="hero__left">
+    <div class="hero__left fadein-animation">
       <div class="hero__left__title">
         <h2>Hi,</h2>
         <span id="typingPhrase">I am Nico</span>
@@ -60,7 +60,7 @@
         </a>
       </div>
     </div>
-    <div class="hero__right">
+    <div class="hero__right fadein-animation">
       <div class="hero__right__img"></div>
     </div>
   </div>
