end responsive styles in hero and add animate

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
 
@@ -40,7 +45,7 @@
   </header>
 
   <div class="hero">
-    <div class="hero__left fadein-animation">
+    <div class="hero__left animate__animated animate__fadeInUp">
       <div class="hero__left__title">
         <h2>Hi,</h2>
         <span id="typingPhrase">I am Nico</span>
@@ -60,7 +65,7 @@
         </a>
       </div>
     </div>
-    <div class="hero__right fadein-animation">
+    <div class="hero__right animate__animated animate__fadeInUp">
       <div class="hero__right__img"></div>
     </div>
   </div>
